[package]
name = "elasticsearch-hprof"
version = "0.1.0"
edition = "2018"
description = "Elasticsearch hprof memory dump reader"
authors = [
    "Piotr Rogowski <piotrekrogowski@gmail.com>"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jvm-hprof = "0.1.0"
anyhow = "1"
memmap = "0.7"
ahash = "0.7"
clap = "3.0.0-beta.2"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
