[package]
name = "elasticsearch-hprof"
version = "0.2.2"
edition = "2018"
description = "Elasticsearch hprof memory dump reader"
authors = [
    "Piotr Rogowski <piotrekrogowski@gmail.com>"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jvm-hprof = "0.1.0"
anyhow = "1"
memmap = "0.7"
ahash = "0.8"
clap = { version = "4", features = [ 'derive' ] }
log = "0.4"
env_logger = "0.11.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
