[package]
name = "jvm-hprof"
description = "A parser for JVM hprof heap dumps"
version = "0.1.0"
authors = ["Marshall Pierce <marshall@mpierce.org>"]
edition = "2018"
keywords = ["jvm", "hprof"]
license-file = "LICENSE.txt"
categories = ["development-tools", "parser-implementations"]
repository = "https://bitbucket.org/marshallpierce/jvm-hprof-rs/src/master/"

[dependencies]
# parsing
nom = "5"
# generate getters
getset = "0.1"
# iterating over enum variants
strum_macros = "0.27"
strum = "0.27"
log = "0.4"

[dev-dependencies]
memmap = "0.7"
chrono = "0.4"
itertools = "0.14"
base64 = "0.22"
clap = "4"
escaper = "0.1"
csv = "1"
anyhow = "1"
rayon = "1"
num_cpus = "1"
rand = "0.9"
tempfile = "3"
is_sorted = "0.1"

# index
lmdb-rkv = "0.14.0"

# heap profiling
#dhat = "0.2.1"

[[example]]
name = "analyze_hprof"

[profile.release]
# for dhat or other profiling
debug = 1
